# PIDGui

./: README.md  build.sh  default.nix  meson.build  test.csv
src/: PID.vala  PIDGui.glade  PIDGui.glade~  PIDGuiNoPNG.glade~  dialog.vala  drawing.vala  guiHandler.vala  main.vala
